--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.FIXITKUV1"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginAct"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FIXITKUV1">
@@ -24,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
