--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.FIXITKUV1"
         tools:targetApi="31">
         <activity
-            android:name=".LoginAct"
+            android:name=".SplashAct"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FIXITKUV1">
@@ -23,6 +23,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:windowSoftInputMode="adjustResize"
+            android:name="com.example.fixitkuv1.LoginAct"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="com.example.fixitkuv1.MainActivity"
+            android:exported="true">
         </activity>
         <meta-data
             android:name="preloaded_fonts"
