4th Commit - Still no interaction, only register button for navigating to register page - Redundant labels, hardcoded str, etc - Still Working on register act

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:exported="true">
         </activity>
         <activity
+            android:windowSoftInputMode="adjustResize"
+            android:name="com.example.fixitkuv1.RegisterAct"
+            android:exported="true">
+        </activity>
+        <activity
             android:name="com.example.fixitkuv1.MainActivity"
             android:exported="true">
         </activity>
