--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.fixitkuv1">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -14,6 +15,9 @@
         android:theme="@style/Theme.FIXITKUV1"
         tools:targetApi="31">
         <activity
+            android:name=".DashboardAct"
+            android:exported="false" />
+        <activity
             android:name=".SplashAct"
             android:exported="true"
             android:label="@string/app_name"
@@ -25,19 +29,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:windowSoftInputMode="adjustResize"
-            android:name="com.example.fixitkuv1.LoginAct"
-            android:exported="true">
-        </activity>
+            android:name=".LoginAct"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
-            android:windowSoftInputMode="adjustResize"
-            android:name="com.example.fixitkuv1.RegisterAct"
-            android:exported="true">
-        </activity>
+            android:name=".RegisterAct"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
-            android:name="com.example.fixitkuv1.MainActivity"
-            android:exported="true">
-        </activity>
+            android:name=".MainActivity"
+            android:exported="true"></activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
